--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -66,3 +66,87 @@ $navbar-height: 72px;
   border-radius: 50%;
   display: inline-block;
 }
+
+.ftco-section {
+  padding: 7em 0;
+  position: relative;
+}
+@media (max-width: 767.98px) {
+  .ftco-section {
+    padding: 6em 0;
+  }
+}
+
+.resume-wrap {
+  width: 100%;
+  margin-bottom: 30px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  padding-bottom: 10px;
+}
+.resume-wrap .icon {
+  width: 50px;
+  height: 50px;
+  background: #3e64ff;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  border-radius: 50%;
+}
+.resume-wrap .icon span {
+  color: #fff;
+  font-size: 28px;
+}
+.resume-wrap .text {
+  width: calc(100% - 50px);
+}
+.resume-wrap .date {
+  font-weight: 700;
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.6);
+  color: #3e64ff;
+}
+.resume-wrap h2 {
+  font-size: 24px;
+  font-weight: 700;
+}
+.resume-wrap .position {
+  font-size: 18px;
+  font-weight: 700;
+  color: #000000;
+}
+
+#navi {
+  top: 180px;
+  position: -webkit-sticky;
+  position: sticky;
+  margin: 0;
+}
+#navi ul {
+  margin: 0;
+  padding: 0;
+}
+#navi li {
+  font-weight: 700;
+  list-style: none;
+  margin-bottom: 10px;
+}
+#navi li a {
+  color: #000000;
+}
+#navi li a.current {
+  color: #3e64ff;
+  margin-left: 20px;
+  position: relative;
+}
+#navi li a.current:after {
+  position: absolute;
+  top: 50%;
+  left: -24px;
+  width: 20px;
+  height: 2px;
+  content: "";
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  background: #3e64ff;
+}
