--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -3,6 +3,9 @@ body,
 html {
   width: 100%;
   height: 100%;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 // Typography
@@ -36,6 +39,10 @@ hr.light {
 }
 
 // Page section padding
+.page-section {
+  padding: 8rem 0;
+}
+
 .page-section {
   padding: 8rem 0;
 }
