--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -150,3 +150,102 @@ $navbar-height: 72px;
   transform: translateY(-50%);
   background: #3e64ff;
 }
+
+.page {
+  width: 100%;
+  margin-bottom: 7em;
+}
+.page.four {
+  margin-bottom: 0;
+}
+
+.heading {
+  font-weight: 800;
+  font-size: 40px;
+  margin-bottom: 30px;
+  color: #000000;
+}
+
+.heading-nav {
+  font-weight: 800;
+  font-size: 40px;
+  margin-bottom: 30px;
+  color: #000000;
+}
+
+.service-img {
+  mix-blend-mode: multiply;
+}
+
+.page .heading {
+  font-weight: 800;
+  font-size: 30px;
+  margin-bottom: 30px;
+  color: #3e64ff;
+}
+
+.services-1 {
+  margin-bottom: 40px;
+  padding: 2em;
+  background: rgba(255, 255, 255, 0.1);
+  width: 100%;
+}
+.services-1 .icon {
+  display: block;
+  margin-bottom: 30px;
+}
+.services-1 .icon i {
+  font-size: 60px;
+  line-height: 1;
+  color: #3e64ff;
+}
+.services-1 .desc h3 {
+  line-height: 1.3;
+  font-size: 20px;
+  font-weight: 500;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  position: relative;
+  color: #000000;
+}
+.services-1 .desc h3:after {
+  position: absolute;
+  bottom: -15px;
+  left: 0;
+  right: 0;
+  content: "";
+  width: 30px;
+  height: 1px;
+  background: #3e64ff;
+  margin: 0 auto;
+}
+.services-1 .desc h3 a {
+  color: #fff;
+}
+.services-1 .desc h4 {
+  font-size: 20px;
+  font-weight: 300;
+  margin-bottom: 18px;
+}
+
+.services-1 .desc span {
+  text-transform: uppercase;
+  font-size: 12px;
+  margin-bottom: 10px;
+  color: #3e64ff;
+}
+.services-1 .desc p {
+  color: rgba(0, 0, 0, 0.7);
+}
+.services-1:hover {
+  background: #3e64ff;
+}
+.services-1:hover .icon i {
+  color: #fff;
+}
+.services-1:hover h3 {
+  color: #000000;
+}
+.services-1:hover h3:after {
+  background: #000000;
+}
