--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -43,14 +43,26 @@ hr.light {
 }
 
 .btn-modal {
-  padding: 1.25rem 2.25rem;
+  padding: 1rem 1rem;
   font-size: 0.85rem;
   font-weight: 700;
   color: white;
+  font-kerning: 2px;
+  border-radius: 20px;
+  text-transform: uppercase;
+  border: 1px solid white;
+  background-color: rgba(0, 0, 0, 0.598);
+}
+
+.btn-modal:hover {
+  padding: 1rem 1rem;
+  font-size: 0.85rem;
+  font-weight: 700;
+  color: white;
+  border-radius: 20px;
   text-transform: uppercase;
   border: 2px solid white;
-  background-color: "black";
-  border-radius: 10rem;
+  background-color: rgb(211, 39, 0);
 }
 
 // Page section padding
