--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -12,7 +12,7 @@
     .nav-item {
       &.active {
         .nav-link {
-          color: $primary !important;
+          color: white !important;
         }
       }
 
@@ -29,6 +29,7 @@
       }
     }
   }
+
   @include media-breakpoint-up(lg) {
     // Base styling for the navbar - screen sizes greater than the large breakpoint
     box-shadow: none;
@@ -80,4 +81,18 @@
       }
     }
   }
+}
+
+.nav-pills .nav-link.active,
+.nav-pills .show > .nav-link {
+  color: #fff;
+  background-color: $primary;
+  letter-spacing: 0.2em;
+}
+
+.nav-pills .nav-link {
+  border-radius: 0.25rem;
+  border: 1px solid $primary;
+  font-size: 0.5em;
+  margin: 5px;
 }
