--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -165,13 +165,7 @@ $navbar-height: 72px;
   font-family: verdana;
   font-size: 3em;
   font-weight: 700;
-  color: #f5f5f5;
-  text-shadow: 1px 1px 1px #919191, 1px 2px 1px #919191, 1px 3px 1px #919191,
-    1px 4px 1px #919191, 1px 5px 1px #919191, 1px 6px 1px #919191,
-    1px 7px 1px #919191, 1px 8px 1px #919191, 1px 9px 1px #919191,
-    1px 10px 1px #919191, 1px 10px 6px rgba(16, 16, 16, 0.4),
-    1px 12px 10px rgba(16, 16, 16, 0.2), 1px 5px 5px rgba(16, 16, 16, 0.2),
-    1px 10px 60px rgba(16, 16, 16, 0.4);
+  color: #000000;
 }
 
 .progress-wrap h3 {
@@ -2314,10 +2308,11 @@ $img-url2: "https://images.unsplash.com/photo-1528785198459-ec50485704c7?ixlib=r
   box-sizing: border-box;
 }
 
-i {
+.arrow-right {
   opacity: 0;
-  font-size: 18px;
+  font-size: 12px;
   color: #fff;
+  font-family: verdana;
   will-change: transform;
   -webkit-transform: scale(0.1);
   transform: scale(0.1);
@@ -2327,6 +2322,8 @@ i {
 
 h2 {
   pointer-events: none;
+  text-transform: uppercase;
+  font-family: verdana;
 }
 
 .card {
@@ -2386,12 +2383,15 @@ h2 {
     color: #fff;
   }
 
-  .fa-arrow-right {
+  .arrow-right {
     z-index: 100;
     position: absolute;
     right: 15px;
     bottom: 25px;
-    font-size: 20px;
+    border: 1px solid white;
+    font-size: 0.8rem;
+    border-radius: 20px;
+    padding: 10px;
     cursor: pointer;
   }
 
@@ -2414,15 +2414,39 @@ h2 {
     height: 100%;
     background-image: url($img-url);
     background-size: 100% 100%;
+    background-color: #1c0fd7;
+    background-blend-mode: multiply;
     filter: grayscale(100%);
+  }
+
+  .overlay-text {
+    position: absolute;
+    left: 60px;
+    top: 0;
+    color: #fff;
+    display: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+
+    display: flex;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    width: 180px;
+    height: 64px;
+    border-radius: 80px;
   }
 
   .social {
     position: absolute;
     left: 60px;
     top: 0;
+    display: none;
     display: -webkit-box;
     display: -ms-flexbox;
+    color: transparent;
     display: flex;
     -ms-flex-pack: distribute;
     justify-content: space-around;
@@ -2454,7 +2478,7 @@ h2 {
     transition-delay: 0.1s;
   }
 
-  &:hover i {
+  &:hover .arrow-right {
     opacity: 1;
     -webkit-transform: scale(1);
     transform: scale(1);
@@ -2479,9 +2503,7 @@ h2 {
   }
 
   &:hover button {
-    transform: scale(10.5);
-    right: 14px;
-    bottom: 14px;
+    transform: scale(90.5);
   }
 
   &:hover .hide-title {
@@ -2491,6 +2513,11 @@ h2 {
 
   &:hover p {
     color: #fff;
+  }
+
+  &:hover .social {
+    color: #fff;
+    z-index: 99;
   }
 
   &:hover .pic {
