--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -325,7 +325,8 @@ section {
 }
 
 .page-holder {
-  overflow: hidden;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 .shape-1 {
