--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -154,6 +154,8 @@ $navbar-height: 72px;
 .page {
   width: 100%;
   margin-bottom: 7em;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 .page.four {
@@ -528,6 +530,8 @@ section {
 */
 .hero {
   padding: 1.25rem 0;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 .platforms {
