--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -2,6 +2,7 @@
 #mainNav {
   box-shadow: $box-shadow;
   background-color: $white;
+
   transition: background-color 0.2s ease;
   .navbar-brand {
     font-family: $font-family-sans-serif;
@@ -12,7 +13,7 @@
     .nav-item {
       &.active {
         .nav-link {
-          color: white !important;
+          color: $primary !important;
         }
       }
 
@@ -30,9 +31,15 @@
     }
   }
 
+  // @include media-breakpoint-down(md) {
+  //   // Base styling for the navbar - screen sizes greater than the large breakpoint
+  //   display: none;
+  // }
+
   @include media-breakpoint-up(lg) {
     // Base styling for the navbar - screen sizes greater than the large breakpoint
     box-shadow: none;
+
     background-color: transparent;
     .navbar-brand {
       color: fade-out($white, 0.3);
@@ -40,10 +47,12 @@
         color: $white;
       }
     }
+
     .navbar-nav {
       .nav-item {
         .nav-link {
           color: fade-out($white, 0.3);
+
           padding: 0 1rem;
           &:hover {
             color: $white;
@@ -70,6 +79,7 @@
         color: $primary;
       }
     }
+
     .navbar-nav {
       .nav-item {
         .nav-link {
