--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -484,15 +484,11 @@ section {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  background: #540cfa;
+  background: $orange;
   display: block;
-  opacity: 1;
+
   padding: 0;
   outline: none;
-}
-
-.modal-content .close span {
-  color: #fff;
 }
 
 /*
@@ -650,7 +646,6 @@ section {
 }
 
 .showcase-link i {
-  color: rgba(84, 12, 250, 0.5);
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
   font-size: 1.5rem;
@@ -668,7 +663,6 @@ section {
 
 .showcase-link.active i,
 .showcase-link:hover i {
-  color: #540cfa;
 }
 
 /*
@@ -2424,7 +2418,7 @@ h2 {
   .pg-text {
     position: absolute;
 
-    font-size: 0.5rem;
+    font-size: 0.9rem;
     display: none;
     color: transparent;
     display: flex;
@@ -2512,6 +2506,7 @@ h2 {
     opacity: 1;
     -webkit-transform: scale(1);
     transform: scale(1);
+    background-color: #c74905;
   }
 
   button {
@@ -2588,6 +2583,7 @@ h2 {
 
 .modal-page {
   overflow-y: scroll;
+  background-color: #fff;
   -webkit-overflow-scrolling: touch;
   height: 100%;
 }
