--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -74,6 +74,11 @@ hr.light {
   padding: 8rem 0;
 }
 
+.page-section-resume {
+  padding: 8rem 0;
+  background: rgb(255, 255, 255);
+}
+
 // Modal
 .modal-backdrop {
   background-color: #0b0b0b;
