--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -9,6 +9,28 @@ $brown: #0192b3 !default;
 // Set primary color to orange
 $primary: $orange !default;
 
+.heading-title {
+  text-transform: uppercase;
+  font-family: verdana;
+  font-weight: 700;
+
+  font-size: 1.3em;
+}
+
+.text-main {
+  $font-family-sans-serif: "Merriweather Sans", -apple-system,
+    BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+    "Noto Color Emoji" !default;
+  font-size: 1rem;
+}
+
+.credits {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
 // Font overrides
 $font-family-sans-serif: "Merriweather Sans", -apple-system, BlinkMacSystemFont,
   "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
@@ -1503,8 +1525,11 @@ h2 {
 
   .pg-title {
     position: absolute;
-
-    font-size: 1.5em;
+    text-transform: uppercase;
+    font-family: verdana;
+    font-weight: 700;
+    color: #000000;
+    font-size: 1.2em;
     display: none;
     color: transparent;
     display: flex;
@@ -1534,7 +1559,7 @@ h2 {
     justify-content: space-around;
     -webkit-box-align: center;
     -ms-flex-align: center;
-    align-items: center;
+
     width: 80%;
     border-radius: 80px;
     top: 45%;
@@ -1573,40 +1598,44 @@ h2 {
 
   .social {
     position: absolute;
-    left: 10px;
-    bottom: 22px;
+
     display: none;
-    display: -webkit-box;
     display: -ms-flexbox;
     color: transparent;
     display: flex;
+    text-align: center;
     -ms-flex-pack: distribute;
     justify-content: space-around;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transition: all 0.01s ease;
+    transition: all 0.01s ease;
     width: 150px;
-    height: 24px;
+    height: 34px;
   }
 
   .social i:nth-of-type(1) {
-    -webkit-transition-delay: 0.4s;
-    transition-delay: 0.4s;
+    -webkit-transition-delay: 0.1s;
+    transition-delay: 0.1s;
   }
 
   .social i:nth-of-type(2) {
-    -webkit-transition-delay: 0.3s;
-    transition-delay: 0.3s;
-  }
-
-  .social i:nth-of-type(3) {
     -webkit-transition-delay: 0.2s;
     transition-delay: 0.2s;
   }
 
+  .social i:nth-of-type(3) {
+    -webkit-transition-delay: 0.3s;
+    transition-delay: 0.3s;
+  }
+
   .social i:nth-of-type(4) {
-    -webkit-transition-delay: 0.1s;
-    transition-delay: 0.1s;
+    -webkit-transition-delay: 0.4s;
+    transition-delay: 0.4s;
   }
 
   &:hover .arrow-right {
