--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1014,96 +1014,189 @@ STYLE SWITCHER FOR DEMO
 
 ////////////////////RESUME TIMELINE /////////////////////////////////////@at-root
 
-/* Timeline holder */
-ul.timeline {
-  list-style-type: none;
+.timeline {
+  list-style: none;
+  padding: 20px 0 20px;
+  margin-right: 20px;
   position: relative;
-  padding-left: 1.5rem;
-  margin-right: 2px;
 }
 
-/* Timeline vertical line */
-ul.timeline:before {
+.timeline:before {
+  top: 0;
+  bottom: 0;
+  position: absolute;
   content: " ";
-  background: $brown;
-  display: inline-block;
-  position: absolute;
-  left: 10px;
-  width: 4px;
-  height: 100%;
-  z-index: 400;
-  border-radius: 1rem;
+  width: 3px;
+  background-color: #eeeeee;
+  left: 0%;
+  margin-left: -1.5px;
 }
 
-li.timeline-item {
-  margin: 10px 0;
+.timeline > li {
+  margin-bottom: 20px;
+  position: relative;
 }
 
-/* Timeline item arrow */
-.timeline-arrow {
-  border-top: 0.5rem solid transparent;
-  border-right: 0.5rem solid #fff;
-  border-bottom: 0.5rem solid transparent;
-  display: block;
-  position: absolute;
-  left: 2rem;
-}
-
-/* Timeline item circle marker */
-li.timeline-item::before {
+.timeline > li:before,
+.timeline > li:after {
   content: " ";
-  background: $brown;
-  display: inline-block;
-  position: absolute;
-  border-radius: 50%;
-  border: 3px solid #fff;
-  left: 5px;
-  width: 14px;
-  height: 14px;
-  z-index: 400;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  display: table;
 }
 
-@media screen and (max-width: 776px) {
-  /* Timeline holder */
-  ul.timeline {
-    display: none;
-    list-style-type: none;
-    position: relative;
-    padding-left: 1.5rem;
-    margin-right: 2px;
-  }
+.timeline > li:after {
+  clear: both;
+}
 
-  /* Timeline vertical line */
+.timeline > li:before,
+.timeline > li:after {
+  content: " ";
+  display: table;
+}
+
+.timeline > li:after {
+  clear: both;
+}
+
+.timeline > li > .timeline-panel {
+  width: 96%;
+  float: left;
+  border: 1px solid #d4d4d4;
+  border-radius: 2px;
+  padding: 15px;
+
+  position: relative;
+  -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+}
+
+.timeline > li > .timeline-panel:before {
+  position: absolute;
+  top: 26px;
+  right: -5px;
+  display: inline-block;
+  border-top: 15px solid transparent;
+  border-left: 15px solid #ccc;
+  border-right: 0 solid #ccc;
+  border-bottom: 15px solid transparent;
+  content: " ";
+}
+
+.timeline > li > .timeline-panel:after {
+  position: absolute;
+  top: 27px;
+  right: -1px;
+  display: inline-block;
+  border-top: 14px solid transparent;
+  border-left: 14px solid #fff;
+  border-right: 0 solid #fff;
+  border-bottom: 14px solid transparent;
+  content: " ";
+}
+
+.timeline > li > .timeline-badge {
+  color: #fff;
+  width: 20px;
+  height: 20px;
+  line-height: 50px;
+  font-size: 1.4em;
+  text-align: center;
+  position: absolute;
+  top: 16px;
+  left: 0%;
+  margin-left: -5px;
+  background-color: #999999;
+  z-index: 100;
+  border-top-right-radius: 50%;
+  border-top-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  border-bottom-left-radius: 50%;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel {
+  float: right;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel:before {
+  border-left-width: 0;
+  border-right-width: 15px;
+  left: -15px;
+  right: auto;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel:after {
+  border-left-width: 0;
+  border-right-width: 14px;
+  left: -14px;
+  right: auto;
+}
+
+.timeline-badge.primary {
+  background-color: #2e6da4 !important;
+}
+
+.timeline-badge.success {
+  background-color: #3f903f !important;
+}
+
+.timeline-badge.warning {
+  background-color: #f0ad4e !important;
+}
+
+.timeline-badge.danger {
+  background-color: #d9534f !important;
+}
+
+.timeline-badge.info {
+  background-color: #5bc0de !important;
+}
+
+.timeline-title {
+  margin-top: 0;
+  color: inherit;
+}
+
+.timeline-body > p,
+.timeline-body > ul {
+  margin-bottom: 0;
+}
+
+.timeline-body > p + p {
+  margin-top: 5px;
+}
+
+@media (max-width: 767px) {
   ul.timeline:before {
-    content: " ";
-    background: $brown;
-    display: none;
-    position: absolute;
-    left: 10px;
-    width: 4px;
-    height: 100%;
-    z-index: 400;
-    border-radius: 1rem;
+    left: 40px;
   }
 
-  li.timeline-item {
-    display: none;
+  ul.timeline > li > .timeline-panel {
+    width: calc(100% - 90px);
+    width: -moz-calc(100% - 90px);
+    width: -webkit-calc(100% - 90px);
   }
 
-  /* Timeline item arrow */
-  .timeline-arrow {
-    border-top: 0.5rem solid transparent;
-    border-right: 0.5rem solid #fff;
-    border-bottom: 0.5rem solid transparent;
-    display: block;
-    position: absolute;
-    left: 2rem;
+  ul.timeline > li > .timeline-badge {
+    left: 15px;
+    margin-left: 0;
+    top: 16px;
   }
 
-  /* Timeline item circle marker */
-  li.timeline-item::before {
-    content: " ";
+  ul.timeline > li > .timeline-panel {
+    float: right;
+  }
+
+  ul.timeline > li > .timeline-panel:before {
+    border-left-width: 0;
+    border-right-width: 15px;
+    left: -15px;
+    right: auto;
+  }
+
+  ul.timeline > li > .timeline-panel:after {
+    border-left-width: 0;
+    border-right-width: 14px;
+    left: -14px;
+    right: auto;
   }
 }
 
@@ -1966,7 +2059,7 @@ $accent-color: #355cc9;
 }
 
 .card-service {
-  width: 420px;
+  width: 100%;
   height: 340px;
   margin: 1em;
   perspective: 1500px;
@@ -2020,11 +2113,6 @@ $accent-color: #355cc9;
     display: block;
     border-radius: 6px;
     backface-visibility: hidden;
-    background: linear-gradient(
-      40deg,
-      rgba(67, 138, 243, 0.7),
-      rgba(255, 242, 166, 0.7)
-    );
   }
   .inner {
     grid-template-rows: 5fr 1fr 1fr 2fr 1fr;
@@ -2036,7 +2124,7 @@ $accent-color: #355cc9;
     margin-bottom: 0.3em;
     text-transform: uppercase;
     letter-spacing: 3px;
-    color: #fff;
+    color: #000;
     font-weight: 500;
     text-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
   }
