--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -17,6 +17,14 @@ $primary: $orange !default;
   font-size: 1.3em;
 }
 
+// .container-fluid {
+//   width: 100%;
+//   padding-right: 1px;
+//   padding-left: 1px;
+//   margin-right: auto;
+//   margin-left: auto;
+// }
+
 .text-main {
   $font-family-sans-serif: "Merriweather Sans", -apple-system,
     BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
@@ -223,11 +231,13 @@ $navbar-height: 72px;
   color: #3e64ff;
 }
 
+#services {
+  background-color: #34adff;
+  background-image: -webkit-linear-gradient(150deg, #34adff 35%, #4cbfff 35%);
+  min-height: 400px;
+}
+
 .services-1 {
-  margin-bottom: 40px;
-  padding: 2em;
-  background: rgb(255, 255, 255);
-  width: 100%;
 }
 .services-1 .icon {
   display: block;
@@ -270,7 +280,7 @@ $navbar-height: 72px;
 .services-1 .desc span {
   text-transform: uppercase;
   font-size: 12px;
-  margin-bottom: 10px;
+
   color: #3e64ff;
 }
 .services-1 .desc p {
@@ -1547,7 +1557,7 @@ h2 {
   font-family: verdana;
 }
 
-.card {
+.cards {
   position: relative;
   width: 100%;
   height: 100%;
@@ -1840,20 +1850,20 @@ h2 {
   height: 400px;
   transition: all 0.3s;
 
-  @media screen and (max-width: 992px) {
-    max-width: 680px;
-    height: 400px;
-  }
+  // @media screen and (max-width: 992px) {
+  //   max-width: 680px;
+  //   height: 400px;
+  // }
 
-  @media screen and (max-width: 768px) {
-    min-height: 500px;
-    height: auto;
-    margin: 180px auto;
-  }
+  // @media screen and (max-width: 768px) {
+  //   min-height: 500px;
+  //   height: auto;
+  //   margin: 180px auto;
+  // }
 
-  @media screen and (max-height: 500px) and (min-width: 992px) {
-    height: 350px;
-  }
+  // @media screen and (max-height: 500px) and (min-width: 992px) {
+  //   height: 350px;
+  // }
 
   &__item {
     display: flex;
@@ -2120,8 +2130,9 @@ $accent-color: #355cc9;
   }
 
   h2 {
-    grid-row: 2;
-    margin-bottom: 0.3em;
+    grid-row: 1;
+    font-size: 1.3rem;
+    margin-top: 2.3em;
     text-transform: uppercase;
     letter-spacing: 3px;
     color: #000;
@@ -2132,10 +2143,8 @@ $accent-color: #355cc9;
   .rating {
     grid-row: 3;
     color: rgba(255, 255, 255, 0.8);
-    font-size: 14px;
-    display: flex;
-    flex-flow: row nowrap;
-    i {
+
+    img {
       margin: 0 1px;
     }
   }
@@ -2232,6 +2241,7 @@ $accent-color: #355cc9;
   text-transform: uppercase;
   letter-spacing: 1px;
   font-weight: 600;
+
   cursor: pointer;
   display: block;
   padding: 0 1.5em;
@@ -2239,20 +2249,18 @@ $accent-color: #355cc9;
   line-height: 2.9em;
   min-width: 3em;
   background-color: transparent;
-  border: solid 2px #fff;
-  color: #fff;
+  border: solid 2px $orange;
+  color: $orange;
   border-radius: 4px;
   text-align: center;
   left: 50%;
   backface-visibility: hidden;
   transition: 0.3s ease-in-out;
-  text-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
 
   &:hover {
-    background-color: #fff;
-    box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
+    background-color: $orange;
     text-shadow: none;
-    color: $accent-color;
+    color: white;
   }
 
   &.return {
@@ -2278,4 +2286,189 @@ $accent-color: #355cc9;
 }
 ::-webkit-scrollbar-thumb:hover {
   background: $accent-color;
+}
+
+$color-primary-light: #7ed56f;
+$color-primary-dark: #28b485;
+$color-secondary-light: #ffb900;
+$color-secondary-dark: #ff7730;
+$color-tertiary-light: #2998ff;
+$color-tertiary-dark: #5643fa;
+
+.cards {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.card-3 {
+  width: 100%;
+  position: relative;
+  height: 340px;
+  margin: 1em;
+  perspective: 150em;
+  background-color: transparent;
+
+  &__side {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    background-color: turquoise;
+    transition: all 0.6s ease;
+    box-shadow: 1em 1em 2em rgba(0, 0, 0, 0.2);
+
+    &--front {
+      background-color: rgb(255, 37, 37);
+    }
+
+    &--back {
+      color: #fff;
+      transform: rotateY(180deg);
+
+      &-1 {
+        background-image: linear-gradient(
+          to right bottom,
+          $color-primary-light,
+          $color-primary-dark
+        );
+      }
+
+      &-2 {
+        background-image: linear-gradient(
+          to right bottom,
+          $color-tertiary-light,
+          $color-tertiary-dark
+        );
+      }
+
+      &-3 {
+        background-image: linear-gradient(
+          to right bottom,
+          $color-secondary-light,
+          $color-secondary-dark
+        );
+      }
+    }
+  }
+
+  &:hover &__side--front {
+    transform: rotateY(-180deg);
+  }
+
+  &:hover &__side--back {
+    transform: rotate(0);
+  }
+
+  &__description {
+    text-transform: uppercase;
+    font-size: 5em;
+    padding: 1em 0;
+
+    svg {
+      width: 1.5em;
+      height: 1.5em;
+      fill: #fff;
+    }
+  }
+}
+
+.profile-card-3 {
+  font-family: "Open Sans", Arial, sans-serif;
+  position: relative;
+  float: left;
+  overflow: hidden;
+  width: 100%;
+  text-align: center;
+  height: 100%;
+  border: none;
+}
+.profile-card-3 .background-block {
+  float: left;
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+}
+.profile-card-3 .background-block .background {
+  width: 125%;
+  vertical-align: top;
+  opacity: 0.9;
+}
+.profile-card-3 .card-content {
+  width: 100%;
+  padding: 15px 25px;
+  color: #232323;
+  float: left;
+  background: #efefef;
+  height: 50%;
+  border-radius: 0 0 5px 5px;
+  position: relative;
+  z-index: 9999;
+}
+.profile-card-3 .card-content::before img {
+  content: "";
+  background: #efefef;
+  width: 120%;
+  height: 100%;
+  left: 9px;
+  bottom: 51px;
+  position: absolute;
+  z-index: -1;
+  transform: rotate(-10deg);
+}
+.profile-card-3 .profile {
+  border-radius: 50%;
+  position: absolute;
+  bottom: 50%;
+  left: 50%;
+  max-width: 100px;
+  opacity: 1;
+  box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.5);
+  border: 2px solid rgba(255, 255, 255, 1);
+  -webkit-transform: translate(-50%, 0%);
+  transform: translate(-50%, 0%);
+  z-index: 99999;
+}
+.profile-card-3 h2 {
+  margin: 0 0 5px;
+  font-weight: 600;
+  font-size: 25px;
+}
+.profile-card-3 h2 small {
+  display: block;
+  font-size: 15px;
+  margin-top: 10px;
+}
+.profile-card-3 i {
+  display: inline-block;
+  font-size: 16px;
+  color: #232323;
+  text-align: center;
+  border: 1px solid #232323;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  border-radius: 50%;
+  margin: 0 5px;
+}
+.profile-card-3 .icon-block {
+  float: left;
+  width: 100%;
+  margin-top: 15px;
+}
+.profile-card-3 .icon-block a {
+  text-decoration: none;
+}
+.profile-card-3 .img i:hover {
+  background-color: #232323;
+  color: #fff;
+  text-decoration: none;
+  text-align: center;
+  border: 1px solid #232323;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  border-radius: 50%;
+  margin: 0 5px;
 }
