--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -66,13 +66,13 @@ hr.light {
 }
 
 // Page section padding
-.page-section {
-  padding: 8rem 0;
-}
+// .page-section {
+//   padding: 8rem 0;
+// }
 
-.page-section {
-  padding: 8rem 0;
-}
+// .page-section {
+//   padding: 8rem 0;
+// }
 
 .page-section-resume {
   padding: 8rem 0;
