--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -3111,7 +3111,7 @@ $color-tertiary-dark: #5643fa;
     }
 
     .box .back {
-        background: #222;
+        background: rgb(255, 255, 255);
         color: black;
         -webkit-transform: rotateX(180deg);
         transform: rotateX(180deg);
