--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -2059,9 +2059,19 @@ $color-tertiary-dark: #5643fa;
   height: 50%;
   border-radius: 0 0 5px 5px;
   position: relative;
-  z-index: 999;
+  z-index: 0;
 }
-
+// .profile-card-3 .card-content::before {
+//   content: "";
+//   background: #efefef;
+//   width: 120%;
+//   height: 100%;
+//   left: 8px;
+//   bottom: 51px;
+//   position: absolute;
+//   z-index: 999;
+//   transform: rotate(-8deg);
+// }
 .profile-card-3 .profile {
   position: absolute;
   bottom: 50%;
@@ -2113,103 +2123,7 @@ $color-tertiary-dark: #5643fa;
   text-decoration: none;
 }
 
-.profile-card-2 {
-  font-family: "Open Sans", Arial, sans-serif;
-  position: relative;
-  float: left;
-  overflow: hidden;
-  width: 100%;
 
-  height: 368px;
-  border: none;
-}
-
-.profile-card-2 .background-block {
-  float: left;
-  width: 100%;
-  height: 200px;
-  overflow: hidden;
-  background-color: #0192b3;
-}
-.profile-card-2 .background-block .background {
-  width: 100%;
-  vertical-align: top;
-  opacity: 0.2;
-  -webkit-filter: blur(0.5px);
-  filter: blur(0.5px);
-}
-.profile-card-2 .card-content {
-  width: 100%;
-  padding: 15px 25px;
-  color: #232323;
-  float: left;
-  background: #efefef;
-  height: 50%;
-  border-radius: 0 0 5px 5px;
-  position: relative;
-  z-index: 9999;
-}
-.profile-card-2 .card-content::before {
-  content: "";
-  background: #efefef;
-  width: 120%;
-  height: 100%;
-  left: 8px;
-  bottom: 51px;
-  position: absolute;
-  z-index: -1;
-  transform: rotate(-8deg);
-}
-.profile-card-2 .profile {
-  position: absolute;
-  bottom: 50%;
-  left: 50%;
-  max-width: 100px;
-  opacity: 1;
-  padding: 20px;
-  background-color: $orange;
-  box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.5);
-  border: 2px solid rgba(255, 255, 255, 1);
-  -webkit-transform: translate(-50%, 0%);
-  transform: translate(-50%, 0%);
-  z-index: 99999;
-}
-
-.profile-card-2 h2 {
-  margin: 0 0 5px;
-  font-weight: 600;
-  font-size: 25px;
-}
-.profile-card-2 h2 small {
-  display: block;
-  font-size: 15px;
-  margin-top: 10px;
-}
-.profile-card-2 i {
-  display: inline-block;
-  font-size: 16px;
-  color: #232323;
-  text-align: center;
-  border: 1px solid #232323;
-  width: 30px;
-  height: 30px;
-  line-height: 30px;
-  border-radius: 50%;
-  margin: 0 5px;
-}
-.profile-card-2 .icon-block {
-  float: left;
-  width: 100%;
-  margin-top: 15px;
-}
-.profile-card-2 .icon-block a {
-  text-decoration: none;
-}
-.profile-card-2 i:hover {
-  background-color: #232323;
-  color: #fff;
-  text-decoration: none;
-}
 
 .overlay {
   position: absolute;
