--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -2213,9 +2213,9 @@ $color-tertiary-dark: #5643fa;
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: Open Sans, sans-serif;
-  --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
-    "Liberation Mono", "Courier New", monospace;
+  // --font-family-sans-serif: Open Sans, sans-serif;
+  // --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
+  //   "Liberation Mono", "Courier New", monospace;
 }
 
 *,
