--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -6,6 +6,7 @@ html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    background-color: $primary;
 }
 
 // Typography
@@ -76,7 +77,18 @@ hr.light {
 
 .page-section-resume {
   padding: 8rem 0;
+  background-color: white;
+  border-top-right-radius: 550px;
 }
+
+
+
+.page-section-projects {
+border-bottom-left-radius: 800px;
+ 
+  padding: 30px;
+}
+
 
 // Modal
 .modal-backdrop {
