--- a/src/sass/_masthead.scss
+++ b/src/sass/_masthead.scss
@@ -2,17 +2,20 @@
 header.masthead {
   padding-top: 10rem;
   height: 100vh;
+  border-bottom-left-radius: 550px;
+
   padding-bottom: calc(10rem - #{$navbar-height});
   // replace the masthead.jpg image in the /img directory to change the image
   // if the image name change, make sure to update the url path below!
   background: linear-gradient(
       to bottom,
-      #{fade-out($blue, 0.2)} 0%,
-      #{fade-out($blue, 0.2)} 100%
+      #{fade-out(#0192b3, 0.2)} 0%,
+      #{fade-out(rgba(0, 8, 116, 0.79), 0.2)} 100%
     ),
     url("../images/slide-4.jpg");
   background-position: center;
   background-repeat: no-repeat;
+  
   background-attachment: scroll;
   background-size: cover;
   h1 {
