--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -72,7 +72,7 @@
   // Navbar styling applied when the page is scrolled
   .site-container.navbar-scrolled #mainNav {
     box-shadow: $box-shadow;
-    background-color: $white;
+    background-color: rgba(0, 0, 0, 0.42);
     .navbar-brand {
       color: $gray-900;
       &:hover {
@@ -96,13 +96,23 @@
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: $primary;
-  letter-spacing: 0.2em;
+  background-color: navy;
+ 
 }
 
 .nav-pills .nav-link {
-  border-radius: 0.25rem;
-  border: 1px solid $primary;
+  border-radius: 30px;
+  border: 1px solid navy;
   font-size: 0.5em;
   margin: 5px;
+
+&:hover {
+  color: rgb(255, 255, 255);
+  background: navy;
 }
+
+
+}
+
+
+
