--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -3,19 +3,55 @@
 // Color overrides
 
 // Set a custom color
-$orange: #f4623a !default;
+$orange: #009ad2 !default;
 $blue: #0192b3 !default;
 
 // Set primary color to orange
-$primary: $orange !default;
+$primary: #ffb700 !default;
 
-$secondary: #0192b3 !default;
-.heading-title {
+$secondary: navy !default;
+
+
+
+.badge {
+background-color: navy;
+color: white;
+text-transform: uppercase;
+font-family: verdana;
+font-weight: 700;
+padding: 10px;
+font-size: 1em;
+border-top-left-radius: 20px;
+border-bottom-right-radius: 20px;
+
+
+
+}
+
+.badge-header {
+  background-color: navy;
+
   text-transform: uppercase;
   font-family: verdana;
   font-weight: 700;
+  color: white;
+border-bottom-right-radius: 30px;
+border-top-left-radius: 30px;
+padding: 10px;
+}
 
-  font-size: 1.3em;
+
+
+
+
+.heading-title {
+  text-transform: uppercase;
+  font-family: verdana;
+  background-color: #11cdef;
+
+  font-weight: 700;
+  background-color: rgb(6, 6, 68);
+  font-size: 2.0em;
 }
 
 .container {
@@ -56,7 +92,7 @@ $navbar-height: 72px;
 
 .ftco-about {
   // background: linear-gradient(90deg, #e8e8e8 50%, #0192b3 50%);
-  background-color: #0b419d;
+ 
 }
 
 .ftco-about .img-about {
@@ -206,6 +242,20 @@ $navbar-height: 72px;
   color: #000000;
 }
 
+
+.heading-section {
+  text-transform: uppercase;
+text-align: center;
+  font-family: verdana;
+  font-size: 1.0em;
+  font-weight: 700;
+  color: #000000;
+}
+
+
+
+
+
 .number-circle {
   background-color: $orange;
   border-radius: 50%;
@@ -245,10 +295,23 @@ $navbar-height: 72px;
   color: #3e64ff;
 }
 
+$bg-height: 800px;
+
+
 #services {
-  background-color: #34adff;
-  background-image: -webkit-linear-gradient(-130deg, #34adff 50%, #ffffff 50%);
-  min-height: 800px;
+  background: linear-gradient(0deg, #0192b376 35%, rgba(0, 0, 255, 0.338) 100%
+  ),
+  url("../images/slide-4.jpg");
+background-position: center;
+background-repeat: no-repeat;
+background-attachment: scroll;
+background-size: cover;
+padding: 10px 10px;
+border-top-right-radius: 550px;
+border-bottom-right-radius: 550px;
+   
+
+
 }
 
 .services-1 {
@@ -2041,12 +2104,13 @@ $color-tertiary-dark: #5643fa;
   width: 100%;
   height: 200px;
   overflow: hidden;
-  background-color: #0192b3;
+  
+  background-color: $secondary;
 }
 .profile-card-3 .background-block .background {
   width: 100%;
   vertical-align: top;
-  opacity: 0.2;
+  opacity: 0.8;
   -webkit-filter: blur(0.5px);
   filter: blur(0.5px);
 }
@@ -2079,7 +2143,7 @@ $color-tertiary-dark: #5643fa;
   max-width: 100px;
   opacity: 1;
   padding: 20px;
-  background-color: $orange;
+  background-color: $primary;
   box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.5);
   border: 2px solid rgba(255, 255, 255, 1);
   -webkit-transform: translate(-50%, 0%);
@@ -2277,32 +2341,8 @@ strong {
   font-weight: bolder;
 }
 
-a {
-  text-decoration: none;
-  color: #5e72e4;
-  background-color: transparent;
-  -webkit-text-decoration-skip: objects;
-}
 
-a:hover {
-  text-decoration: none;
-  color: #233dd2;
-}
 
-a:not([href]):not([tabindex]) {
-  text-decoration: none;
-  color: inherit;
-}
-
-a:not([href]):not([tabindex]):hover,
-a:not([href]):not([tabindex]):focus {
-  text-decoration: none;
-  color: inherit;
-}
-
-a:not([href]):not([tabindex]):focus {
-  outline: 0;
-}
 
 img {
   vertical-align: middle;
@@ -2416,7 +2456,7 @@ h5,
   font-weight: 600;
   line-height: 1.5;
   margin-bottom: 0.5rem;
-  color: #32325d;
+
 }
 
 h2,
@@ -2597,6 +2637,57 @@ hr {
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
   background-color: #fff;
 }
+
+
+.about-card{
+border-top-left-radius: 78px;
+border-bottom-right-radius: 80px;
+margin-bottom: 20px;
+ 
+}
+
+
+
+.about-text p{
+  font-size: 1.5em;
+  }
+
+.skills-card{
+  border-top-left-radius: 80px;
+  border-bottom-right-radius: 80px;
+  margin-bottom: 20px;
+  padding-bottom: 50px;
+ 
+  }
+  
+
+
+
+
+
+
+
+
+
+.card-header1 {
+  margin-bottom: 0;
+margin: 5px;
+text-align: center;
+height: 100px;
+width: 200px;
+  
+  
+  border-bottom-right-radius: 80px;
+  border-top-left-radius: 80px;
+  border-top-left-radius: 80px;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-align-content: center;
+  align-content: center;
+  justify-content: center;
+}
+
 
 .card-header:first-child {
   border-radius: calc(0.375rem - 1px) calc(0.375rem - 1px) 0 0;
@@ -2872,7 +2963,7 @@ button.bg-default:focus {
 .card-profile-stats > div {
   margin-right: 1rem;
   padding: 0.875rem;
-  text-align: center;
+  text-align: left;
 }
 
 .card-profile-stats > div .heading {
@@ -3019,3 +3110,10 @@ input {
 //     -webkit-transform: rotateX(160deg);
 //     box-shadow: 0 20px 20px rgba(255,255,255,.2);
 // }
+
+
+
+
+
+/////////////////////////////////////////////////////////////////////////@at-root
+
