--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -11,21 +11,16 @@ $primary: #ffb700 !default;
 
 $secondary: navy !default;
 
-
-
 .badge {
-background-color: navy;
-color: white;
-text-transform: uppercase;
-font-family: verdana;
-font-weight: 700;
-padding: 10px;
-font-size: 1em;
-border-top-left-radius: 20px;
-border-bottom-right-radius: 20px;
-
-
-
+  background-color: navy;
+  color: white;
+  text-transform: uppercase;
+  font-family: verdana;
+  font-weight: 700;
+  padding: 10px;
+  font-size: 1em;
+  border-top-left-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
 
 .badge-header {
@@ -35,14 +30,10 @@ border-bottom-right-radius: 20px;
   font-family: verdana;
   font-weight: 700;
   color: white;
-border-bottom-right-radius: 30px;
-border-top-left-radius: 30px;
-padding: 10px;
+  border-bottom-right-radius: 30px;
+  border-top-left-radius: 30px;
+  padding: 10px;
 }
-
-
-
-
 
 .heading-title {
   text-transform: uppercase;
@@ -51,7 +42,7 @@ padding: 10px;
 
   font-weight: 700;
   background-color: rgb(6, 6, 68);
-  font-size: 2.0em;
+  font-size: 2em;
 }
 
 .container {
@@ -92,7 +83,6 @@ $navbar-height: 72px;
 
 .ftco-about {
   // background: linear-gradient(90deg, #e8e8e8 50%, #0192b3 50%);
- 
 }
 
 .ftco-about .img-about {
@@ -242,19 +232,14 @@ $navbar-height: 72px;
   color: #000000;
 }
 
-
 .heading-section {
   text-transform: uppercase;
-text-align: center;
+  text-align: center;
   font-family: verdana;
-  font-size: 1.0em;
+  font-size: 1em;
   font-weight: 700;
   color: #000000;
 }
-
-
-
-
 
 .number-circle {
   background-color: $orange;
@@ -297,21 +282,17 @@ text-align: center;
 
 $bg-height: 800px;
 
-
 #services {
-  background: linear-gradient(0deg, #0192b376 35%, rgba(0, 0, 255, 0.338) 100%
-  ),
-  url("../images/slide-4.jpg");
-background-position: center;
-background-repeat: no-repeat;
-background-attachment: scroll;
-background-size: cover;
-padding: 10px 10px;
-border-top-right-radius: 550px;
-border-bottom-right-radius: 550px;
-   
-
-
+  // background: linear-gradient(0deg, #0192b376 35%, rgba(0, 0, 255, 0.338) 100%
+  // ),
+  // url("../images/slide-4.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
+  padding: 10px 10px;
+  border-top-right-radius: 550px;
+  border-bottom-right-radius: 550px;
 }
 
 .services-1 {
@@ -1489,7 +1470,7 @@ h2 {
     font-family: verdana;
     font-weight: 700;
     color: #000000;
-    font-size: 1.5em;
+    font-size: 1.2em;
     display: none;
     color: transparent;
     display: flex;
@@ -1510,7 +1491,7 @@ h2 {
   .pg-text {
     position: absolute;
 
-    font-size: 1em;
+    font-size: 0.8em;
     display: none;
     color: transparent;
     display: flex;
@@ -1576,6 +1557,10 @@ h2 {
     transition: all 0.01s ease;
     width: 150px;
     height: 34px;
+  }
+
+  .social i {
+    font-size: 25px;
   }
 
   .social i:nth-of-type(1) {
@@ -2104,7 +2089,7 @@ $color-tertiary-dark: #5643fa;
   width: 100%;
   height: 200px;
   overflow: hidden;
-  
+
   background-color: $secondary;
 }
 .profile-card-3 .background-block .background {
@@ -2151,15 +2136,6 @@ $color-tertiary-dark: #5643fa;
   z-index: 0;
 }
 
-
-
-
-
-
-
-
-
-
 .profile-card-3 h2 {
   margin: 0 0 5px;
   font-weight: 600;
@@ -2195,8 +2171,6 @@ $color-tertiary-dark: #5643fa;
   color: #fff;
   text-decoration: none;
 }
-
-
 
 .overlay {
   position: absolute;
@@ -2341,9 +2315,6 @@ strong {
   font-weight: bolder;
 }
 
-
-
-
 img {
   vertical-align: middle;
   border-style: none;
@@ -2456,7 +2427,6 @@ h5,
   font-weight: 600;
   line-height: 1.5;
   margin-bottom: 0.5rem;
-
 }
 
 h2,
@@ -2638,45 +2608,30 @@ hr {
   background-color: #fff;
 }
 
-
-.about-card{
-border-top-left-radius: 78px;
-border-bottom-right-radius: 80px;
-margin-bottom: 20px;
- 
+.about-card {
+  border-top-left-radius: 78px;
+  border-bottom-right-radius: 80px;
+  margin-bottom: 20px;
 }
 
+.about-text p {
+  font-size: 1.2em;
+}
 
-
-.about-text p{
-  font-size: 1.5em;
-  }
-
-.skills-card{
+.skills-card {
   border-top-left-radius: 80px;
   border-bottom-right-radius: 80px;
   margin-bottom: 20px;
   padding-bottom: 50px;
- 
-  }
-  
-
-
-
-
-
-
-
-
+}
 
 .card-header1 {
   margin-bottom: 0;
-margin: 5px;
-text-align: center;
-height: 100px;
-width: 200px;
-  
-  
+  margin: 5px;
+  text-align: center;
+  height: 100px;
+  width: 200px;
+
   border-bottom-right-radius: 80px;
   border-top-left-radius: 80px;
   border-top-left-radius: 80px;
@@ -2687,7 +2642,6 @@ width: 200px;
   align-content: center;
   justify-content: center;
 }
-
 
 .card-header:first-child {
   border-radius: calc(0.375rem - 1px) calc(0.375rem - 1px) 0 0;
@@ -2909,7 +2863,7 @@ button.bg-default:focus {
   font-size: 0.875rem;
   position: relative;
   transition: all 0.15s ease;
-  letter-spacing: 0.025em;
+
   text-transform: none;
   will-change: transform;
 }
@@ -3087,7 +3041,6 @@ label {
   color: black;
   -webkit-transform: rotateX(180deg);
   transform: rotateX(180deg);
-
 }
 
 // label:hover .box {
@@ -3111,9 +3064,4 @@ input {
 //     box-shadow: 0 20px 20px rgba(255,255,255,.2);
 // }
 
-
-
-
-
 /////////////////////////////////////////////////////////////////////////@at-root
-
